--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     background-color: white;
     border-radius: 10px;
     border-color: black;
-    width: 60%;
+    width: 500px;
     padding: 15px;
     
 
